# mt3scm

./: .coverage  .gitignore  CITATION.cff  LICENSE  README.md  README.rst  helpers.py  main.py  perfect.py  plot_examples.py  plot_lorenz_example.py  plot_perfect.py  plot_results_analysis.py  plot_style.txt  pyproject.toml
.github/workflows/: action-linter.yml  action-pytest.yml  action-testing.yml
docs/: CONTRIBUTING.md
mt3scm/: __init__.py  mt3scm_computation.py  mts3cm_class.py
tests/: test_mt3scm.py
