[tool.poetry]
name = "mt3scm"
version = "0.1.0"
description = "Python package for 'Multivariate Time Series Sub-Sequence CLustering Metric'"
authors = ["Jonas Köhne <jokohonas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
scikit-learn = "^1.0.2"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
matplotlib = "^3.5.1"
pytest-cov = "^3.0.0"
coverage-badge = "^1.1.0"
seaborn = "^0.11.2"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
