[tool.poetry]
name = "mt3scm"
version = "0.4.6"
description = "Python package for 'Multivariate Time Series Sub-Sequence CLustering Metric'"
authors = ["Jonas Köhne <jokohonas@gmail.com>"]
maintainers = ["Jonas Köhne <jokohonas@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/Jokonu/mt3scm"

[tool.poetry.dependencies]
python = ">=3.9"
numpy = "^1.22.3"
scikit-learn = "^1.0.2"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
matplotlib = "^3.5.1"
pytest-cov = "^3.0.0"
coverage-badge = "^1.1.0"
seaborn = "^0.11.2"
black = "^22.1.0"
toml = "^0.10.2"
pylint = "^2.12.2"
mypy = "^0.942"
flake8 = "^4.0.1"
isort = "^5.10.1"
docutils = "^0.18.1"
tslearn = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.isort]
profile = "black"
import_heading_stdlib="Standard Libraries Import"
import_heading_thirdparty="Third Party Libraries Import"
import_heading_firstparty="Own Libraries Import"